# clg

./: .gitignore  CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  canonical_form.cpp  continuous_variable.cpp  gaussian.cpp  gaussian.h  linear_gaussian.h  variable_elimination.cpp  variable_elimination.h
include/CLG/: canonical_form.h  scope.h  variable_elimination.h
src/: CMakeLists.txt  linear_gaussian.cpp  scope.cpp  variable_elimination.cpp
